# claude-flow

./: .dockerignore  .eslintrc.json  .gitignore  CHANGELOG.md  CHANGELOG_ALPHA44.md  CHANGELOG_ALPHA50.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  How-Claude-Flow-Ensures-Code-Quality.md  OPENCODE_INSTALLATION.md  OpenCode.md  README.md  RELEASE_CHECKLIST_ALPHA50.md  comprehensive-lint-fix.sh  fix-case-declarations.cjs  fix-control-regex.cjs  fix-numeric-separators.sh  fix-prefer-const.sh  fix-simple-unused.sh  fix-unused-vars.cjs  fix-unused-vars.sh  hello-world-architecture.md  hello-world-research.md  implementation-complete.md  implementation-roadmap.md  issue-653-response.md  issue-implement-mcp-tools.md  jest.config.js  json.md  lint-output.txt  neural-tools-analysis-report.md  package-lock.json  package.json  scc-analysis.json  test-runner.cjs  test-runner.js  validation-report.md  workflow-automation-test-report.md
.claude/: mcp.json  settings-clean.json  settings-fixed.json  settings-minimal.json  settings-working.json
.hive-mind/: config.json
.opencode/: opencode.db-shm
.roo/: mcp.json
agentic-flow/: .dockerignore  .env.example  .eslintrc.js  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION_SUMMARY.md  MASTRA_INTEGRATION.md  OPTIMIZATION_REPORT_PHASE3.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PRODUCTION_ML_IMPLEMENTATION.md  README-INTEGRATION-TESTS.md  README.md  package.json  (+10 more)
agentic-flow-ui/: package.json  tailwind.config.js
hello/languages/cpp/: CMakeLists.txt  hello  hello.cpp
(+1181 files in other folders)
